--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>gleam.replica</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <nav>
+        <img src="img/NOTIFICATION.png" alt="" class="first">
+        <img src="img/NAVIGATION.png" alt="" class="nd">
+    </nav>
+    <section class="txt">
+        <div class="all">
 
+            <p class="spark">Sparkling Laptops Await You!⚡</p>
+            <h1>Dedicated to giving top notch cleaning services
+            </h1>
+                <div class="btn">
+                    <img src="img/CTA BTN.png" alt="" class="book">
+                    <p>Talk to Sales <img src="img/Vector (3).png" alt=""></p>
+                </div>
+                <div class="socials">
+                    <img src="img/Vecttor.png" alt="">
+                    <img src="img/Vector (1).png" alt="">
+                    <img src="img/Vectori.png" alt="">
+                    <img src="img/Vector (2).png" alt="">
+                </div>
+        </div>
+    </section>
+    <section class="hand">
+        <div class="and">
+
+            <img src="img/IMAGE.png" alt="">
+        </div>
+    </section>
+</body>
+</html>
