--- a/index.html
+++ b/index.html
@@ -12,8 +12,47 @@
 </head>
 <body>
     <nav>
-        <img src="img/NOTIFICATION.png" alt="" class="first">
-        <img src="img/NAVIGATION.png" alt="" class="nd">
+        <div class="blu">
+            <p>
+                🎉  Introducing Gleam HQ - the ultimate solution for all your laptop cleaning needs! Learn More
+            </p>
+        </div>
+        <div class="white">
+            <div class="logo">
+             <div class="join">
+                <img src="img/Vectorr.png" alt="" class="g">
+                <img src="img/Vector.png" alt="" class="leam">
+             </div>   
+             <img src="img/line.png" alt="" class="line">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>
+                        <a href="#">
+                            About us
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                           Terms of services
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Blog
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Contact us
+                        </a>
+                    </li>
+                </ul>
+                <button>Buy Asssories</button>
+            </div>
+        </div>
+        <!-- <img src="img/NOTIFICATION.png" alt="" class="first">
+        <img src="img/NAVIGATION.png" alt="" class="nd"> -->
     </nav>
     <section class="txt">
         <div class="all">
