--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>gleam.replica</title>
+    
+    <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
+
+    <!-- fontawesome -->
+<link rel="stylesheet"href="style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/fontawesome.min.css" integrity="sha512-R+xPS2VPCAFvLRy+I4PgbwkWjw1z5B5gNDYgJN5LfzV4gGNeRQyVrY7Uk59rX+c8tzz63j8DeZPLqmXvBxj8pA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -14,7 +21,7 @@
     <nav>
         <div class="blu">
             <p>
-                🎉  Introducing Gleam HQ - the ultimate solution for all your laptop cleaning needs! Learn More
+                🎉  Introducing Gleam HQ - the ultimate solution for all your laptop cleaning needs! <a href=""> Learn More</a>
             </p>
         </div>
         <div class="white">
@@ -80,3 +87,5 @@
     </section>
 </body>
 </html>
+<i class="fa-regular fa-circle-xmark"></i>
+<i class="fa-solid fa-bars"></i>
