--- a/index.html
+++ b/index.html
@@ -20,8 +20,11 @@
 <body>
     <nav>
         <div class="blu">
-            <p>
-                🎉  Introducing Gleam HQ - the ultimate solution for all your laptop cleaning needs! <a href=""> Learn More</a>
+            <p class="dey">
+                🎉  Introducing Gleam HQ -the ultimate solution for all your laptop cleaning needs!<a href=""> Learn More</a>
+            </p>
+            <p class="rem">
+                🎉  Introducing Gleam HQ <a href=""> Learn More</a>
             </p>
         </div>
         <div class="white">
@@ -57,9 +60,11 @@
                 </ul>
                 <button>Buy Asssories</button>
             </div>
+            <div class="icons">
+                <i class="fa-solid fa-bars"></i>
+            </div>
+            
         </div>
-        <!-- <img src="img/NOTIFICATION.png" alt="" class="first">
-        <img src="img/NAVIGATION.png" alt="" class="nd"> -->
     </nav>
     <section class="txt">
         <div class="all">
@@ -82,10 +87,9 @@
     <section class="hand">
         <div class="and">
 
-            <img src="img/IMAGE.png" alt="">
+            <img src="img/IMAGE.png" alt="" class="desktop">
+            <img src="img/IMAGE (1).png" alt="" class="mobile">
         </div>
     </section>
 </body>
 </html>
-<i class="fa-regular fa-circle-xmark"></i>
-<i class="fa-solid fa-bars"></i>
