--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,9 +73,13 @@
             <p class="spark">Sparkling Laptops Await You!⚡</p>
             <h1>Dedicated to giving top notch cleaning services
             </h1>
-                <div class="btn">
+                <!-- <div class="btn">
                     <img src="img/CTA BTN.png" alt="" class="book">
-                    <p>Talk to Sales <img src="img/Vector (3).png" alt=""></p>
+                     <p>Talk to Sales <img src="img/Vector (3).png" alt=""></p>
+                </div> -->
+                <div class="btn">
+                    <button class="bg-btn"> Book a Cleaning</button>
+                    <button class="no-bg-btn"> <span>Talk to Sales</span> <img src="arrow-right.svg" alt=""></button>
                 </div>
                 <div class="socials">
                     <img src="img/Vecttor.png" alt="">
