--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             </h1>
                 <div class="btn">
                     <button class="bg-btn"> Book a Cleaning</button>
-                    <button class="no-bg-btn"> <span>Talk to Sales</span> <img src="arrow-right.svg" alt=""></button>
+                    <button class="no-bg-btn"> <span>Talk to Sales</span> <img src="img/arrow-right.svg" alt=""></button>
                 </div>
                 <div class="socials">
                     <img src="img/Vecttor.png" alt="">
